fixed z-index issue

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
 }
 
 #top-header {
+  z-index: 100;
   position: fixed;
   top:0;
   left:0;
